[package]
name = "bili_music_download"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "^0.11.4", features = ["json"]}
urlencoding = "^1.0.0"
serde_json = "^1.0.67"
text_io = "^0.1.9"
iced = {version = "^0.3", features = ["tokio"]}
rfd = "^0.4.4"